################################################################################
# Set Files
################################################################################
set(Math_Test_Suite 
    "Quaternions_test.cpp"
    "Rotators_test.cpp"
    "Vector_test.cpp"
)

################################################################################
# Create executable
################################################################################
add_executable(
    MathTestSuite
    ${Math_Test_Suite}
)

################################################################################
# Link GTest and Engine Modules
################################################################################
target_link_libraries(MathTestSuite gtest_main EngineMath)